[gd_scene load_steps=10 format=3 uid="uid://cx02jptdukfk7"]

[ext_resource type="Texture2D" uid="uid://cbdc5r4hiruxq" path="res://assets/sprites/bosses/roundtrip/roundtrip.png" id="1_nh6p5"]
[ext_resource type="Script" path="res://scenes/pawns/bosses/roundtrip/roundtrip.gd" id="1_oji8g"]
[ext_resource type="PackedScene" uid="uid://cdqny6j5cggy6" path="res://scenes/components/direction_anchor/direction_anchor.tscn" id="3_3pcwx"]

[sub_resource type="Animation" id="Animation_g0eow"]
resource_name = "idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -23)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_1jf4i"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -23)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_bkrsj"]
resource_name = "setup"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -23)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [2, 3, 4]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"on_ground_setup"
}]
}

[sub_resource type="Animation" id="Animation_7rmvj"]
resource_name = "ground_throw"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -23)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.5, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [4, 5, 4, 6, 4]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"on_ground_throw"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7ctrj"]
_data = {
"RESET": SubResource("Animation_1jf4i"),
"ground_throw": SubResource("Animation_7rmvj"),
"idle": SubResource("Animation_g0eow"),
"setup": SubResource("Animation_bkrsj")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fut4g"]
radius = 9.0
height = 40.0

[node name="Roundtrip" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 129
script = ExtResource("1_oji8g")

[node name="Animation" type="AnimationPlayer" parent="."]
autoplay = "idle"
libraries = {
"": SubResource("AnimationLibrary_7ctrj")
}

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("1_nh6p5")
offset = Vector2(0, -23)
hframes = 7

[node name="BodyCollision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -20)
shape = SubResource("CapsuleShape2D_fut4g")

[node name="DirectionAnchor" parent="." instance=ExtResource("3_3pcwx")]
rotation = 3.14159

[node name="Timers" type="Node" parent="."]

[node name="ActionTimer" type="Timer" parent="Timers"]
unique_name_in_owner = true
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="Timers/ActionTimer" to="." method="_on_action_timer_timeout"]
